--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 @import "header.css";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 @import "globals.css";
+@import "navigation.css";
+@import "search-bar.css";
+@import "friends.css";
+@import "chats.css";
