--- a/css/chats.css
+++ b/css/chats.css
@@ -7,7 +7,6 @@
 .chats__list .chats__chat {
   padding: 15px;
   border-bottom: 1px solid #ebebeb;
-  /*심각하다... 저 원도 안사라지고, 그래서 그런지 저 밑의 선도 잘려서 나온다...*/
 }
 
 .chats__chat .chat__content img {
@@ -29,8 +28,8 @@
 }
 
 .chat__preview .chat__user {
-  font-weight: 600; /*잉 원래 부터 fat한디요...?*/
-  margin-bottom: 5px; /*왜 마진을 적용했는데 줄어들죠..? 매직..?*/
+  font-weight: 600;
+  margin-bottom: 5px;
 }
 
 .chat__preview .chat__last-message {
