--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import "reset.css";
 @import "header.css";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 @import "globals.css";
