--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 2;
 }
 
 .top-header .header__bottom,
@@ -24,6 +25,10 @@
 
 .top-header .header__column {
   width: 33%;
+}
+
+.top-header .header__bottom .header__column:first-child {
+  color: rgba(225, 255, 255, 0.5);
 }
 
 .top-header .header__column:last-child {
